# arc-game-framework

./: CMake_resources.txt
core/: CMakeLists.txt
core/inc/: App.hpp  Defs.hpp  Engine.hpp  HeapArray.hpp  JobManager.hpp  Logger.hpp  MakeResource.hpp  RingBuffer.hpp  SceneManager.hpp
core/src/: App.cpp  Engine.cpp  Logger.cpp  SceneManager.cpp
core/tst/logger/: CMakeLists.txt  main.cpp
core/tst/scenemanager/: CMakeLists.txt  main.cpp
